releng: use dedicated TP for building (test)
Change-Id: I3e42046748511902f81c50858f131b2f479c188f
Signed-off-by: Thomas Guiu <thomas.guiu@soyatec.com>