@@ -347,7 +347,7 @@ This file was generated by Eclipse EGF
         </echoproperties>
     </target>
 	
-	<target name="all" depends="CleanStep_1,TP_juno,install_cots_features,install_ecoretools2,common,PublishStep_6,common_feature,BuildStep_8,PublishStep_9,accuracy_feature,resourcereuse,PublishStep_12,PublishStep_13,resourcereuse_feature,BuildStep_15,PublishStep_16,cadence_feature,report,PublishStep_19,PublishStep_20,PublishStep_21,report_feature,emde,PublishStep_24,PublishStep_25,PublishStep_26,PublishStep_27,PublishStep_28,PublishStep_29,PublishStep_30,PublishStep_31,emde_feature,diagrams,PublishStep_34,diagrams_representation_feature,BuildStep_36,PublishStep_37,composer_feature,BuildStep_39,PublishStep_40,transposer_feature,ad,PublishStep_43,PublishStep_44,PublishStep_45,PublishStep_46,ad_feature,ad_dsl,PublishStep_49,PublishStep_50,addsl_feature,detachment,PublishStep_53,detachment_feature,BuildStep_55,PublishStep_56,PublishStep_57,sdk_feature,kitalpha,fix_eclipse.ini,zip_juno_results" />
+	<target name="all" depends="CleanStep_1,TP_build,TP_juno,install_cots_features,install_ecoretools2,common,PublishStep_7,common_feature,BuildStep_9,PublishStep_10,accuracy_feature,resourcereuse,PublishStep_13,PublishStep_14,resourcereuse_feature,BuildStep_16,PublishStep_17,cadence_feature,report,PublishStep_20,PublishStep_21,PublishStep_22,report_feature,emde,PublishStep_25,PublishStep_26,PublishStep_27,PublishStep_28,PublishStep_29,PublishStep_30,PublishStep_31,PublishStep_32,emde_feature,diagrams,PublishStep_35,diagrams_representation_feature,BuildStep_37,PublishStep_38,composer_feature,BuildStep_40,PublishStep_41,transposer_feature,ad,PublishStep_44,PublishStep_45,PublishStep_46,PublishStep_47,ad_feature,ad_dsl,PublishStep_50,PublishStep_51,addsl_feature,detachment,PublishStep_54,detachment_feature,BuildStep_56,PublishStep_57,PublishStep_58,sdk_feature,kitalpha,fix_eclipse.ini,zip_juno_results" />
 	<target name="CleanStep_1" >
 		<antcall target="clean.result" />
 	</target>
@@ -388,7 +388,7 @@ This file was generated by Eclipse EGF
 		</buckminster>
     </target>
 
-    <target name="BuildStep_8" depends="init,install.buckminster">
+    <target name="BuildStep_9" depends="init,install.buckminster">
         <echo message="Importing projects into workspace ${workspace} and binaries into target platform" />
 
 		<echo message="install JRE ${env.JAVA_HOME}" />
@@ -404,14 +404,14 @@ This file was generated by Eclipse EGF
         <buckminster command="importtargetdefinition">
             <cmdargs>
                 <arg value="--active" />
-                <arg value="${relengDir}/buckminster_BuildStep_8/build.target" />
+                <arg value="${relengDir}/buckminster_BuildStep_9/build.target" />
             </cmdargs>
         </buckminster>
 		<echo message="provision : import projects in workspace" />
         <buckminster command="import">
             <!-- Uncomment to debug <globargs><jvmarg value="-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=y"/></globargs> -->
             <cmdargs>
-                <arg value="${relengDir}/buckminster_BuildStep_8/build.mspec" />
+                <arg value="${relengDir}/buckminster_BuildStep_9/build.mspec" />
             </cmdargs>
         </buckminster>
 
@@ -462,7 +462,7 @@ This file was generated by Eclipse EGF
 		</buckminster>
     </target>
 
-    <target name="BuildStep_15" depends="init,install.buckminster">
+    <target name="BuildStep_16" depends="init,install.buckminster">
         <echo message="Importing projects into workspace ${workspace} and binaries into target platform" />
 
 		<echo message="install JRE ${env.JAVA_HOME}" />
@@ -478,14 +478,14 @@ This file was generated by Eclipse EGF
         <buckminster command="importtargetdefinition">
             <cmdargs>
                 <arg value="--active" />
-                <arg value="${relengDir}/buckminster_BuildStep_15/build.target" />
+                <arg value="${relengDir}/buckminster_BuildStep_16/build.target" />
             </cmdargs>
         </buckminster>
 		<echo message="provision : import projects in workspace" />
         <buckminster command="import">
             <!-- Uncomment to debug <globargs><jvmarg value="-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=y"/></globargs> -->
             <cmdargs>
-                <arg value="${relengDir}/buckminster_BuildStep_15/build.mspec" />
+                <arg value="${relengDir}/buckminster_BuildStep_16/build.mspec" />
             </cmdargs>
         </buckminster>
 
@@ -610,7 +610,7 @@ This file was generated by Eclipse EGF
 		</buckminster>
     </target>
 
-    <target name="BuildStep_36" depends="init,install.buckminster">
+    <target name="BuildStep_37" depends="init,install.buckminster">
         <echo message="Importing projects into workspace ${workspace} and binaries into target platform" />
 
 		<echo message="install JRE ${env.JAVA_HOME}" />
@@ -626,14 +626,14 @@ This file was generated by Eclipse EGF
         <buckminster command="importtargetdefinition">
             <cmdargs>
                 <arg value="--active" />
-                <arg value="${relengDir}/buckminster_BuildStep_36/build.target" />
+                <arg value="${relengDir}/buckminster_BuildStep_37/build.target" />
             </cmdargs>
         </buckminster>
 		<echo message="provision : import projects in workspace" />
         <buckminster command="import">
             <!-- Uncomment to debug <globargs><jvmarg value="-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=y"/></globargs> -->
             <cmdargs>
-                <arg value="${relengDir}/buckminster_BuildStep_36/build.mspec" />
+                <arg value="${relengDir}/buckminster_BuildStep_37/build.mspec" />
             </cmdargs>
         </buckminster>
 
@@ -647,7 +647,7 @@ This file was generated by Eclipse EGF
 		</buckminster>
     </target>
 
-    <target name="BuildStep_39" depends="init,install.buckminster">
+    <target name="BuildStep_40" depends="init,install.buckminster">
         <echo message="Importing projects into workspace ${workspace} and binaries into target platform" />
 
 		<echo message="install JRE ${env.JAVA_HOME}" />
@@ -663,14 +663,14 @@ This file was generated by Eclipse EGF
         <buckminster command="importtargetdefinition">
             <cmdargs>
                 <arg value="--active" />
-                <arg value="${relengDir}/buckminster_BuildStep_39/build.target" />
+                <arg value="${relengDir}/buckminster_BuildStep_40/build.target" />
             </cmdargs>
         </buckminster>
 		<echo message="provision : import projects in workspace" />
         <buckminster command="import">
             <!-- Uncomment to debug <globargs><jvmarg value="-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=y"/></globargs> -->
             <cmdargs>
-                <arg value="${relengDir}/buckminster_BuildStep_39/build.mspec" />
+                <arg value="${relengDir}/buckminster_BuildStep_40/build.mspec" />
             </cmdargs>
         </buckminster>
 
@@ -795,7 +795,7 @@ This file was generated by Eclipse EGF
 		</buckminster>
     </target>
 
-    <target name="BuildStep_55" depends="init,install.buckminster">
+    <target name="BuildStep_56" depends="init,install.buckminster">
         <echo message="Importing projects into workspace ${workspace} and binaries into target platform" />
 
 		<echo message="install JRE ${env.JAVA_HOME}" />
@@ -811,14 +811,14 @@ This file was generated by Eclipse EGF
         <buckminster command="importtargetdefinition">
             <cmdargs>
                 <arg value="--active" />
-                <arg value="${relengDir}/buckminster_BuildStep_55/build.target" />
+                <arg value="${relengDir}/buckminster_BuildStep_56/build.target" />
             </cmdargs>
         </buckminster>
 		<echo message="provision : import projects in workspace" />
         <buckminster command="import">
             <!-- Uncomment to debug <globargs><jvmarg value="-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=y"/></globargs> -->
             <cmdargs>
-                <arg value="${relengDir}/buckminster_BuildStep_55/build.mspec" />
+                <arg value="${relengDir}/buckminster_BuildStep_56/build.mspec" />
             </cmdargs>
         </buckminster>
 
@@ -832,7 +832,7 @@ This file was generated by Eclipse EGF
 		</buckminster>
     </target>
 
-	<target name="PublishStep_6" depends="init,install.buckminster" >
+	<target name="PublishStep_7" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -861,7 +861,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_9" depends="init,install.buckminster" >
+	<target name="PublishStep_10" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -890,7 +890,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_12" depends="init,install.buckminster" >
+	<target name="PublishStep_13" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -919,7 +919,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_13" depends="init,install.buckminster" >
+	<target name="PublishStep_14" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -948,7 +948,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_16" depends="init,install.buckminster" >
+	<target name="PublishStep_17" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -977,7 +977,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_19" depends="init,install.buckminster" >
+	<target name="PublishStep_20" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -1006,7 +1006,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_20" depends="init,install.buckminster" >
+	<target name="PublishStep_21" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -1035,7 +1035,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_21" depends="init,install.buckminster" >
+	<target name="PublishStep_22" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -1064,7 +1064,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_24" depends="init,install.buckminster" >
+	<target name="PublishStep_25" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -1093,7 +1093,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_25" depends="init,install.buckminster" >
+	<target name="PublishStep_26" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -1122,7 +1122,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_26" depends="init,install.buckminster" >
+	<target name="PublishStep_27" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -1151,7 +1151,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_27" depends="init,install.buckminster" >
+	<target name="PublishStep_28" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -1180,7 +1180,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_28" depends="init,install.buckminster" >
+	<target name="PublishStep_29" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -1209,7 +1209,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_29" depends="init,install.buckminster" >
+	<target name="PublishStep_30" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -1238,7 +1238,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_30" depends="init,install.buckminster" >
+	<target name="PublishStep_31" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -1267,7 +1267,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_31" depends="init,install.buckminster" >
+	<target name="PublishStep_32" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -1296,7 +1296,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_34" depends="init,install.buckminster" >
+	<target name="PublishStep_35" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -1325,7 +1325,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_37" depends="init,install.buckminster" >
+	<target name="PublishStep_38" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -1354,7 +1354,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_40" depends="init,install.buckminster" >
+	<target name="PublishStep_41" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -1383,7 +1383,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_43" depends="init,install.buckminster" >
+	<target name="PublishStep_44" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -1412,7 +1412,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_44" depends="init,install.buckminster" >
+	<target name="PublishStep_45" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -1441,7 +1441,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_45" depends="init,install.buckminster" >
+	<target name="PublishStep_46" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -1470,7 +1470,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_46" depends="init,install.buckminster" >
+	<target name="PublishStep_47" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -1499,7 +1499,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_49" depends="init,install.buckminster" >
+	<target name="PublishStep_50" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -1528,7 +1528,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_50" depends="init,install.buckminster" >
+	<target name="PublishStep_51" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -1557,7 +1557,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_53" depends="init,install.buckminster" >
+	<target name="PublishStep_54" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -1586,7 +1586,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_56" depends="init,install.buckminster" >
+	<target name="PublishStep_57" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -1615,7 +1615,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_57" depends="init,install.buckminster" >
+	<target name="PublishStep_58" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -1713,6 +1713,38 @@ openFile
 			</source>
 		</p2.mirror>
 	</target>
+	<target name="TP_build" depends="init,install.director" >
+        <eclipse.launch app="director">
+            <args>
+                <jvmarg value="-Declipse.p2.mirrors=false" />
+                    <jvmarg value="-Xmx1024m"/>
+                    <jvmarg value="-XX:MaxPermSize=256m"/>
+
+
+            	<arg value="-roaming" />
+            	<arg value="-profileProperties" />
+                <arg value="org.eclipse.update.install.features=true " />
+
+                <arg value="-d" />
+                <arg value="${publish}/TP_build" />
+                
+                <arg value="-p" />
+                <arg value="SDKProfile" />
+
+                <arg value="-r" />
+                <arg value="${eclipse38.download.prefix}" />
+
+
+                <arg value="-i" />
+                <arg value="org.eclipse.sdk.feature.group" />                
+
+                <arg value="-i" />
+                <arg value="org.eclipse.sdk.ide" />
+
+
+            </args>
+        </eclipse.launch>
+	</target>	
 	<target name="TP_juno" depends="init,install.director" >
         <eclipse.launch app="director">
             <args>
